[package]
name = "tedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.22" }
itertools = "0.10.3"
log = "0.4.16"
sdl2 = { version = "0.36.0", optional = true, features = ["image", "gfx"]}
unicode-segmentation = "1.2"
unicode-width = "0.1"
log4rs = "1.1.1"
bincode = "1.3.1"
rand = "0.8.5"
serde_json = "1.0.81"
rust_pixel = { path = "../../rust-pixel" }

[features]
sdl = []
