[package]
name = "ttf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.28"
log4rs = "1.4.0"
fontdue = "0.9"
image = "0.25.8"

ttf-parser = "0.25.1"
rust_pixel = { path = "../.." }

[features]
term = ["rust_pixel/term"]
wgpu = ["rust_pixel/wgpu"]
